crates/guatiao/include/guatiao.h

typedef enum guatiao_status guatiao_status;
typedef uint32_t guatiao_status;
typedef struct guatiao_registry guatiao_registry;
typedef struct guatiao_str {
  const uint8_t *ptr;
  size_t len;
} guatiao_str;
typedef struct guatiao_alloc {
  uint32_t struct_size;
  void *ctx;
  void *(*alloc)(void *ctx, size_t size, size_t align);
  void (*free)(void *ctx, void *ptr, size_t size, size_t align);
  void (*release)(void *ctx);
} guatiao_alloc;
typedef struct guatiao_string {
  uint8_t *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_string;
typedef union guatiao_payload {
  uint8_t b;
  struct guatiao_string text;
  struct guatiao_buffer bytes;
  struct guatiao_list list;
  struct guatiao_map map;
} guatiao_payload;
typedef struct guatiao_value {
  uint32_t tag;
  uint32_t _pad;
  union guatiao_payload payload;
} guatiao_value;
typedef struct guatiao_provider_error {
  guatiao_status status;
  struct guatiao_string message;
} guatiao_provider_error;
typedef const struct guatiao_map *guatiao_map_ptr;
typedef struct guatiao_host_services {
  uint32_t struct_size;
  void *ctx;
  guatiao_status (*get)(void *ctx, struct guatiao_str key, const struct guatiao_provider_info **out);
  guatiao_status (*list)(void *ctx,
                         struct guatiao_str kind,
                         const struct guatiao_provider_info **out,
                         size_t cap,
                         size_t *total);
  const struct guatiao_alloc *(*alloc)(void *ctx);
} guatiao_host_services;
typedef struct guatiao_host_info {
  uint32_t struct_size;
  uint32_t abi_version;
  struct guatiao_str host_id;
  struct guatiao_str host_version;
  const struct guatiao_alloc *alloc;
  guatiao_map_ptr meta;
  const struct guatiao_host_services *services;
} guatiao_host_info;
typedef struct guatiao_merge_override {
  struct guatiao_str path;
  uint32_t mode;
} guatiao_merge_override;
struct guatiao_registry *guatiao_registry_new(struct guatiao_str id,
                                              struct guatiao_str version,
                                              const struct guatiao_alloc *alloc);
guatiao_status guatiao_registry_provider_create(const struct guatiao_registry *reg,
                                                struct guatiao_str key,
                                                const struct guatiao_value *config,
                                                void **out,
                                                struct guatiao_provider_error *err);
void guatiao_registry_provider_destroy(const struct guatiao_registry *reg,
                                       struct guatiao_str key,
                                       void *instance);
const struct guatiao_host_info *guatiao_registry_host(struct guatiao_registry *reg);
void guatiao_registry_free(struct guatiao_registry *reg);
guatiao_status guatiao_registry_keyed_by(struct guatiao_registry *reg,
                                         struct guatiao_str template_);
guatiao_status guatiao_registry_libraries_keyed_by(struct guatiao_registry *reg,
                                                   struct guatiao_str template_);
guatiao_status guatiao_registry_load_file(struct guatiao_registry *reg,
                                          struct guatiao_str path,
                                          const struct guatiao_alloc *alloc,
                                          struct guatiao_value *out);
guatiao_status guatiao_registry_libraries(const struct guatiao_registry *reg,
                                          const struct guatiao_alloc *alloc,
                                          struct guatiao_value *out);
guatiao_status guatiao_registry_provider(const struct guatiao_registry *reg,
                                         struct guatiao_str key,
                                         const struct guatiao_alloc *alloc,
                                         struct guatiao_value *out);
guatiao_status guatiao_registry_available(const struct guatiao_registry *reg,
                                          struct guatiao_str kind,
                                          const struct guatiao_alloc *alloc,
                                          struct guatiao_value *out);
bool guatiao_registry_provider_available(const struct guatiao_registry *reg,
                                         struct guatiao_str key,
                                         struct guatiao_str *reason);
int32_t guatiao_registry_priority(const struct guatiao_registry *reg, struct guatiao_str id);
guatiao_status guatiao_registry_best(const struct guatiao_registry *reg,
                                     struct guatiao_str kind,
                                     const struct guatiao_alloc *alloc,
                                     struct guatiao_value *out);
void *guatiao_registry_provider_ctx(const struct guatiao_registry *reg, struct guatiao_str key);
const struct guatiao_value *guatiao_registry_provider_config(const struct guatiao_registry *reg,
                                                             struct guatiao_str key);
guatiao_status guatiao_merge(uint32_t mode,
                             const struct guatiao_value *earlier,
                             const struct guatiao_value *later,
                             const struct guatiao_alloc *alloc,
                             uint32_t options,
                             const struct guatiao_merge_override *overrides,
                             size_t overrides_len,
                             struct guatiao_value *out,
                             struct guatiao_value *out_error);