bindings/dart/lib/src/bindings.g.dart


  late final _guatiao_mergePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Uint32,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Uint32,
              ffi.Pointer<guatiao_merge_override>,
              ffi.Size,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>)>>('guatiao_merge');
  late final _guatiao_merge = _guatiao_mergePtr.asFunction<
      int Function(
          int,
          ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_alloc>,
          int,
          ffi.Pointer<guatiao_merge_override>,
          int,
          ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_available(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str kind,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_available(
      reg,
      kind,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_availablePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_available');
  late final _guatiao_registry_available =
      _guatiao_registry_availablePtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_best(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str kind,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_best(
      reg,
      kind,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_bestPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_best');
  late final _guatiao_registry_best = _guatiao_registry_bestPtr.asFunction<
      int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
          ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  void guatiao_registry_free(
    ffi.Pointer<guatiao_registry> reg,
  ) {
    return _guatiao_registry_free(
      reg,
    );
  }

  late final _guatiao_registry_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<guatiao_registry>)>>(
      'guatiao_registry_free');
  late final _guatiao_registry_free = _guatiao_registry_freePtr
      .asFunction<void Function(ffi.Pointer<guatiao_registry>)>();

  ffi.Pointer<guatiao_host_info> guatiao_registry_host(
    ffi.Pointer<guatiao_registry> reg,
  ) {
    return _guatiao_registry_host(
      reg,
    );
  }

  late final _guatiao_registry_hostPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<guatiao_host_info> Function(
              ffi.Pointer<guatiao_registry>)>>('guatiao_registry_host');
  late final _guatiao_registry_host = _guatiao_registry_hostPtr.asFunction<
      ffi.Pointer<guatiao_host_info> Function(ffi.Pointer<guatiao_registry>)>();

  int guatiao_registry_keyed_by(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str template_,
  ) {
    return _guatiao_registry_keyed_by(
      reg,
      template_,
    );
  }

  late final _guatiao_registry_keyed_byPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_keyed_by');
  late final _guatiao_registry_keyed_by = _guatiao_registry_keyed_byPtr
      .asFunction<int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_libraries(
    ffi.Pointer<guatiao_registry> reg,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_libraries(
      reg,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_librariesPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_libraries');
  late final _guatiao_registry_libraries =
      _guatiao_registry_librariesPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_libraries_keyed_by(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str template_,
  ) {
    return _guatiao_registry_libraries_keyed_by(
      reg,
      template_,
    );
  }

  late final _guatiao_registry_libraries_keyed_byPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_libraries_keyed_by');
  late final _guatiao_registry_libraries_keyed_by =
      _guatiao_registry_libraries_keyed_byPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_load_file(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str path,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_load_file(
      reg,
      path,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_load_filePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_load_file');
  late final _guatiao_registry_load_file =
      _guatiao_registry_load_filePtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  ffi.Pointer<guatiao_registry> guatiao_registry_new(
    guatiao_str id,
    guatiao_str version,
    ffi.Pointer<guatiao_alloc> alloc,
  ) {
    return _guatiao_registry_new(
      id,
      version,
      alloc,
    );
  }

  late final _guatiao_registry_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<guatiao_registry> Function(guatiao_str, guatiao_str,
              ffi.Pointer<guatiao_alloc>)>>('guatiao_registry_new');
  late final _guatiao_registry_new = _guatiao_registry_newPtr.asFunction<
      ffi.Pointer<guatiao_registry> Function(
          guatiao_str, guatiao_str, ffi.Pointer<guatiao_alloc>)>();

  int guatiao_registry_priority(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str id,
  ) {
    return _guatiao_registry_priority(
      reg,
      id,
    );
  }

  late final _guatiao_registry_priorityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_priority');
  late final _guatiao_registry_priority = _guatiao_registry_priorityPtr
      .asFunction<int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_provider(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_provider(
      reg,
      key,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_providerPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_provider');
  late final _guatiao_registry_provider =
      _guatiao_registry_providerPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  bool guatiao_registry_provider_available(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    ffi.Pointer<guatiao_str> reason,
  ) {
    return _guatiao_registry_provider_available(
      reg,
      key,
      reason,
    );
  }

  late final _guatiao_registry_provider_availablePtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(ffi.Pointer<guatiao_registry>, guatiao_str,
                  ffi.Pointer<guatiao_str>)>>(
      'guatiao_registry_provider_available');
  late final _guatiao_registry_provider_available =
      _guatiao_registry_provider_availablePtr.asFunction<
          bool Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_str>)>();

  ffi.Pointer<guatiao_value> guatiao_registry_provider_config(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
  ) {
    return _guatiao_registry_provider_config(
      reg,
      key,
    );
  }

  late final _guatiao_registry_provider_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<guatiao_value> Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_provider_config');
  late final _guatiao_registry_provider_config =
      _guatiao_registry_provider_configPtr.asFunction<
          ffi.Pointer<guatiao_value> Function(
              ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_provider_create(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    ffi.Pointer<guatiao_value> config,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out,
    ffi.Pointer<guatiao_provider_error> err,
  ) {
    return _guatiao_registry_provider_create(
      reg,
      key,
      config,
      out,
      err,
    );
  }

  late final _guatiao_registry_provider_createPtr = _lookup<
          ffi.NativeFunction<
              guatiao_status$1 Function(
                  ffi.Pointer<guatiao_registry>,
                  guatiao_str,
                  ffi.Pointer<guatiao_value>,
                  ffi.Pointer<ffi.Pointer<ffi.Void>>,
                  ffi.Pointer<guatiao_provider_error>)>>(
      'guatiao_registry_provider_create');
  late final _guatiao_registry_provider_create =
      _guatiao_registry_provider_createPtr.asFunction<
          int Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<guatiao_provider_error>)>();

  ffi.Pointer<ffi.Void> guatiao_registry_provider_ctx(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
  ) {
    return _guatiao_registry_provider_ctx(
      reg,
      key,
    );
  }

  late final _guatiao_registry_provider_ctxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_provider_ctx');
  late final _guatiao_registry_provider_ctx =
      _guatiao_registry_provider_ctxPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<guatiao_registry>, guatiao_str)>();

  void guatiao_registry_provider_destroy(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    ffi.Pointer<ffi.Void> instance,
  ) {
    return _guatiao_registry_provider_destroy(
      reg,
      key,
      instance,
    );
  }

  late final _guatiao_registry_provider_destroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<ffi.Void>)>>('guatiao_registry_provider_destroy');
  late final _guatiao_registry_provider_destroy =
      _guatiao_registry_provider_destroyPtr.asFunction<
          void Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<ffi.Void>)>();
